# template

./: .coveragerc  .gitignore  .mcp.json  .pre-commit-config.yaml  .releaserc.json  BLOG.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  lefthook.yml  package.json  pyproject.toml  pytest-precommit.ini  requirements-dev.txt  requirements.txt  setup.py  sonar-project.properties
.claude/: settings.json
.claude/agents/: README.md  autofix-postmortem.md  ci-failure-analyzer.md  commit-formatter.md  coverage-guardian.md  dep-update-validator.md  pre-push-validator.md  precommit-validator.md  release-notes.md  secret-prescanner.md  sonar-preflight.md  workflow-debugger.md
.github/workflows/: auto-fix-ci.yml  ci.yml  claude-code.yml
docs/: vibe-coding-guard-rails.drawio
docs/scripts/: create_development_comparison_graph.py
scripts/: get-env.sh
src/acronymcreator/: __init__.py  cli.py  core.py
tests/: test_acronym_creator.py  test_cli.py
